src/test/ui/llvm-asm/issue-62046.stderr
error[E0668]: malformed inline assembly
  --> $DIR/issue-62046.rs:9:9
   |
LL |         llvm_asm!("nop" : "+r"("r15"));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `llvm_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0668`.
